--- a/views/auth/signUpPage.templ
+++ b/views/auth/signUpPage.templ
@@ -3,27 +3,27 @@ package vauth;
 import "github.com/naqet/company-management-system/views/layout"
 
 templ SignUpPage() {
-	@vlayout.Base() {
-		@vlayout.Header()
-		<form class="container" hx-post="/auth/signup" hx-ext="json-enc" hx-trigger="submit" hx-swap="none">
-			<label>
-				Name
-				<input name="name" type="name"/>
-			</label>
-			<label>
-				Email
-				<input name="email" type="email"/>
-			</label>
-			<label>
-				Password
-				<input name="password" type="password"/>
-			</label>
-			<label>
-				Confirm Password
-				<input name="confirmPassword" type="password"/>
-			</label>
-			<button>Submit</button>
-			<a href="/auth/login">Log in</a>
-		</form>
-	}
+@vlayout.Base() {
+@Header()
+<form class="container" hx-post="/auth/signup" hx-ext="json-enc" hx-trigger="submit" hx-swap="none">
+    <label>
+        Name
+        <input name="name" type="name" />
+    </label>
+    <label>
+        Email
+        <input name="email" type="email" />
+    </label>
+    <label>
+        Password
+        <input name="password" type="password" />
+    </label>
+    <label>
+        Confirm Password
+        <input name="confirmPassword" type="password" />
+    </label>
+    <button>Submit</button>
+    <a href="/auth/login">Log in</a>
+</form>
+}
 }
