feat: create project feature

--- a/views/home/base.templ
+++ b/views/home/base.templ
@@ -3,10 +3,10 @@ package vhome;
 import "github.com/naqet/company-management-system/views/layout"
 
 templ Base() {
-    @vlayout.Base() {
-        @vlayout.Header()
-        <main class="container">
-            Hello world
-        </main>
-    }
+@vlayout.Base() {
+@vlayout.Header()
+<main class="container">
+    <a href="/project/create">New project</a>
+</main>
+}
 }
