feat: create sprint modal

--- a/views/home/base.templ
+++ b/views/home/base.templ
@@ -7,6 +7,7 @@ templ Base() {
 @vlayout.Header()
 <main class="container">
     <a href="/project/create">New project</a>
+    <a href="/sprint/create">New sprint</a>
 </main>
 }
 }
