--- a/views/project/createPage.templ
+++ b/views/project/createPage.templ
@@ -1,19 +1,20 @@
 package vproject;
 
 import "github.com/naqet/company-management-system/views/layout"
-import "github.com/naqet/company-management-system/views/sprint"
 
 templ CreatePage() {
 	@vlayout.Base() {
 		@vlayout.Header()
 		<main class="container">
-			<section>
-				@vsprint.CreateModal()
-			</section>
 			<form hx-post="/project" hx-swap="none">
 				<label>
 					Title
 					<input name="title" required/>
+				</label>
+				<label>
+					Key
+					<input name="key" onkeypress="return event.which != 32" required aria-describedby="valid-key-helper"/>
+					<small id="valid-key-helper">Has to be unique, without spaces</small>
 				</label>
 				<button>Create</button>
 			</form>
