feat: added issue types

--- a/views/project/summary.templ
+++ b/views/project/summary.templ
@@ -28,15 +28,7 @@ templ Summary(data db.Project) {
     </section>
     <section>
         <h2>Epics</h2>
-        if len(data.Epics) > 0 {
-        <ul>
-            for _, epic := range data.Epics {
-            <li>{ epic.Title }</li>
-            }
-        </ul>
-        } else {
-        <small>No data</small>
-        }
+        <small>TODO</small>
     </section>
 </main>
 }
