--- a/views/project/createPage.templ
+++ b/views/project/createPage.templ
@@ -8,8 +8,8 @@ templ CreatePage() {
 		<main class="container">
 			<form hx-post="/project" hx-swap="none">
 				<label>
-					Title
-					<input name="title" required/>
+					Name
+					<input name="name" required/>
 				</label>
 				<label>
 					Key
