--- a/views/layout/header.templ
+++ b/views/layout/header.templ
@@ -1,42 +1,49 @@
 package vlayout;
 
 templ Header() {
-<header class="container">
-    <nav>
-        <ul>
-            <li>
-                <a href="/">
-                    @Logo()
-                </a>
-            </li>
-        </ul>
-        <ul>
-            <li>
-                <a href="/">Home</a>
-            </li>
-            <li>
-                <a href="/">Home</a>
-            </li>
-            <li>
-                <a href="/">Home</a>
-            </li>
-            <li>
-                <details class="dropdown">
-                    <summary>Account</summary>
-                    <ul>
-                        <li>
-                            <a href="/profile">Profile</a>
-                        </li>
-                        <li>
-                            <a href="/settings">Settings</a>
-                        </li>
-                        <li>
-                            <a href="/auth/logout" hx-post="/auth/logout">Log out</a>
-                        </li>
-                    </ul>
-                </details>
-            </li>
-        </ul>
-    </nav>
-</header>
+	<header class="container">
+		<nav>
+			<ul>
+				<li>
+					<a href="/">
+						@Logo()
+					</a>
+				</li>
+			</ul>
+			<ul>
+				<li>
+					<details class="dropdown">
+						<summary role="button" class="outline">Create</summary>
+						<ul>
+							<li>
+								<a href="/issue/create">Issue</a>
+							</li>
+							<li>
+								<a href="/project/create">Project</a>
+							</li>
+							<li>
+								<a href="/team/create">Team</a>
+							</li>
+						</ul>
+					</details>
+				</li>
+				<li>
+					<details class="dropdown">
+						<summary>A</summary>
+						<ul>
+							<li>
+								<a href="/profile">Profile</a>
+							</li>
+							<li>
+								<a href="/settings">Settings</a>
+							</li>
+							<li>
+								<a href="/auth/logout" hx-post="/auth/logout">Log out</a>
+							</li>
+						</ul>
+					</details>
+				</li>
+			</ul>
+		</nav>
+	</header>
 }
