--- a/views/layout/header.templ
+++ b/views/layout/header.templ
@@ -24,12 +24,15 @@ templ Header() {
 							<li>
 								<a href="/team/create">Team</a>
 							</li>
+							<li>
+								<a href="/sprint/create">Sprint</a>
+							</li>
 						</ul>
 					</details>
 				</li>
 				<li>
 					<details class="dropdown">
-						<summary>A</summary>
+						<summary>Account</summary>
 						<ul>
 							<li>
 								<a href="/profile">Profile</a>
